<resources>
    <string name="app_name">Peso Ideal</string>
    <string name="sex">Sexo</string>
    <string name="men">HOMBRE</string>
    <string name="women">MUJER</string>
    <string name="Unit">Unidades</string>
    <string name="Unit_1">KG | CM</string>
    <string name="Unit_2">LB | FT</string>
    <string name="height">Altura</string>
    <string name="Weight">Peso</string>
    <string name="IN">IN</string>


    <string name="NO">
        Investigue por su cuenta su complexion para un resultado más sastifactorío
    </string>

    <string name="title">
       Complexión
    </string>

    <string name="message">
        Hay muchas formas de medir la complexión
        siendo una de las más usadas el test de la muñeca
        en el que se mide la circunferencia de la muñeca.
        Presione aceptar para proceder a medir su circuferencia.
    </string>

    <string name="Yes">
        Introduzca la circuenferencia de su muñeca para calcular su complexión
    </string>

    <string-array name="complexion">
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
    </string-array>


    <string-array name="pulgadas">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>


    <string name="mensaje_data_vacio">Favor Introducir Todos los datos</string>

    <string name="centiemtro">Centimetros</string>
    <string name="circunferencia">Circunferencia</string>
    <string name="title_activity_navegacion">navegacion</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Complexion">Complexión</string>
    <string name="action_settings">Settings</string>

    <string name="peso_ideal">
          El peso ideal es una medida que según la altura y la complexión de la muñeca nos da el rango del peso que debemos tener.
          A esto llamamos peso ideal o peso normal,el intervalo menor es el peso mínimo que debemos tener
         y el intervalo mayor el máximo que debemos tener según nuestra características.
    </string>

    <string name="peso_ideal2">Peso Ideal</string>

    <string name="info_complexion">
        Hay muchas formas de medir la complexión siendo una de las más usadas el test de la muñeca en el que se mide la circunferencia de la muñeca.
        Dividimos nuestra altura en centímetros entre la circunferencia de nuestra muñeca también en centímetros.
        Según el resultado tendremos complexión pequeña, media o grande:

    </string>

    <string name="IMC">INDICE MASA CORPORAL</string>
    <string name="info_imc">
        El Índice de Masa Corporal es una medida que relaciona el peso con la altura pero que no
        tiene en cuenta otras medidas antropométricas como la complexión o porcentaje de grasa corporal.
        Solo debemos tomar el IMC de una manera de intrucción porque ofrece mucha incertidumbre.
        Por ejemplo, el Índice de Masa Corporal suele dar sobrepeso,
        incluso obesidad, a personas musculosas, lo cual es un gran error.
    </string>

    <string name="lb">LB</string>
    <string name="kg">KG</string>

    <string name="inter_recomendado">Su peso actual está en el Rango recomendado según la tabla del peso ideal</string>
    <string name="inter_no_recomendado">Su peso actual no está en el Rango recomendado segun la tabla del peso ideal </string>

    <string name="calcular">Calcular</string>
    <string name="historial">Historial</string>
    <string name="informacion">Información</string>
    <string name="acerca_de">Acerca de</string>



    <string name="informacion_titulo">Información Importate</string>
    <string name="informacion_cuerpo">
        Aquellas personas que hacen ejercicio regular y están\n en buena forma física tienen una mayor masa muscular\n y menores niveles de grasa corporal que aquellas que no hacen deporte.\n
        El tejido muscular pesa más que el tejido adiposo (grasa) y no \n necesariamente tiene que afectar a la complexión de la persona.\n
        Por este motivo es completamente necesario hacer un test grasa\n corporal para poder determinar el peso ideal de forma correcta\n.
        Una mujer que entrena a diario y tiene los músculos bastante \n desarrollados puede medir 1,60 y pesar 70kg y estar en un peso completamente saludable.\n
        Las condiciones físicas y de salud individuales van a afectar \n al peso ideal y hay que tenerlas en cuenta. \n\n

         El médico, nutricionista o un entrenador personal\n puede ayudarte a analizar tu situación y \n
        características personales para guiarte \n de la forma más adecuada y saludable.

        El peso ideal según estas tablas de complexión e IMC \n debe ser siempre\n interpretado por un profesional \n
        ya que no tiene en cuenta otras medidas y \n
        circunstancias individuales \n que puedan afectar al peso ideal y \n saludable para una persona determinada. \n

    </string>

    <string name="desarrollado_por">Desarrollado por: </string>
    <string name="version">Version 1.0</string>
    <string name="derechos">Todos los derechos reservados @2017</string>
    <string name="complexion2">Complexión</string>
    <string name="verificar">Verificar</string>
    <string name="kg2">KG</string>
    <string name="balance">balance</string>
    <string name="messure">messure</string>
    <string name="speedometer">speedometer</string>
    <string name="peso_verde">peso_verde</string>
    <string name="Resultado">Resultados</string>
    <string name="opciones">Opciones</string>
</resources>
