<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.randydd.peso_ideal.Home"
    >


    <ImageView
        android:layout_gravity="center"
        android:id="@+id/imageView2"
        android:layout_marginTop="25dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="Logo"
        tools:ignore="HardcodedText" />




    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="35dp"
        >


        <TableRow
            android:gravity="center"
            android:padding="10dp"
            >

            <Button
                android:id="@+id/calcular"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textStyle="bold"
                android:textColor="@color/blanco"
                android:textSize="16sp"
                android:text="@string/calcular" />

        </TableRow>

        <TableRow
            android:gravity="center"
            android:padding="10dp"
            >

            <Button
                android:id="@+id/informacion"
                android:layout_width="250dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/blanco"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/informacion" />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:padding="10dp"
            >

            <Button
                android:id="@+id/historial"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:visibility="gone"
                android:textSize="17sp"
                android:background="@color/amarillo"
                android:text="@string/historial" />
        </TableRow>


        <TableRow
            android:gravity="center"
            android:padding="10dp"
            >

            <Button
                android:id="@+id/acerca_de"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/acerca_de" />

        </TableRow>


    </TableLayout>





</LinearLayout>
