<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.randydd.peso_ideal.informacion"
        android:orientation="vertical"
        >

        <ImageButton
            android:layout_marginTop="10dp"
            android:id="@+id/imageButton"
            android:layout_gravity="center"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/wrench" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <TableRow
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/desarrollado_por"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:gravity="center"
                >

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="Randy Diloné De León"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:gravity="center"
                android:layout_marginTop="15dp"
                >

                <TextView

                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_marginTop="15dp"
                android:gravity="center"
                >

                <TextView

                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>


            <TableRow
                android:layout_marginTop="50dp"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/derechos"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

</LinearLayout>


